# codeOwnerGenerator

./: README.md  pyproject.toml  username-map.example.json
src/codeowner_generator/: __init__.py  analyzer.py  cache.py  codeowners.py  git_utils.py  main.py
